--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>spring-boot-devops</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-devops</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot..</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -36,6 +36,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>devops-automation</finalName>
 	</build>
 
 </project>
