--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ilovejava</groupId>
-	<artifactId>springboot-eks</artifactId>
+	<artifactId>devops-automation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springboot-eks</name>
+	<name>devops-automation</name>
 	<description>Demo project for Spring Boot..</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -49,7 +49,7 @@
 			</plugin>
 		</plugins>
 
-		<finalName>springboot-eks</finalName>
+		<finalName>devops-automation</finalName>
 	</build>
 
 
